# systemctl-menu

./: Cargo.toml  README.md
src/: main.rs  menu_controls_view.rs
