[package]
name = "systemctl-menu"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
raylib = "5.5.1"
